2004-07-21  state  <state@bluefalcon>

	* ChangeLog, default/styles/mt_clean.css, default/styles/nb_rusted.css, nb, plugins/archive/monthly/monthly-cal.sh, plugins/calendar.sh:
	- Renamed --message option to --body.
	- Added "calendarday" class to stylesheets.

2004-07-20  state  <state@bluefalcon>

	* plugins/archive/master_index.sh, plugins/archive/monthly/monthly-cal.sh, plugins/articles.off, plugins/blog_status.sh, plugins/calendar.sh, plugins/fortune.sh, plugins/list_entries.sh, plugins/postformat/tidy.sh, ChangeLog, nb:
	- Updated "exit on error" messages.
	- Abstracted an entry's filename extenstion.

2004-07-17  state  <state@bluefalcon>

	* ChangeLog, docs/nanoblogger.html, nb:
	(add_entry), (delete_blog): - Fixed adding aborted entries to categories.
	- Fixed updating when deleting entries.
	- Fixed missing option reference in error message.

2004-07-14  state  <state@bluefalcon>

	* ChangeLog, nb:
	Fixed verbosity, so that only lines requiring input are not effected.

2004-07-12  state  <state@bluefalcon>

	* ChangeLog, nb (create_weblog):
	Fixed '--description' option, so it works.

	* ChangeLog, nb (show_help):
	Added missing parameters for options requiring them.

2004-07-11  state  <state@bluefalcon>

	* ChangeLog, docs/nanoblogger.html:
	Minor correction in "Managing Entries and Categories" section of manual.

	* ChangeLog, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html, default/index.xml, default/parts/2004-01.htm, default/parts/blog_status.htm, default/parts/cat_1.htm, default/parts/fortune.htm, default/parts/news.htm, docs/nanoblogger.html, nb:
	- Added more help to default entry.
	- Updated "Managing Entries and Categories" section of manual.
	- Replaced old '--importfile' with new '--message' option.
	- Added new '--desc' option to set description of an entry.

2004-07-07  state  <state@bluefalcon>

	* ChangeLog, docs/nanoblogger.html, nb: